- fix horizontal scroll of page - style products on mobile

--- a/assets/css/base/_typography.scss
+++ b/assets/css/base/_typography.scss
@@ -43,6 +43,10 @@ body {
   }
 }
 
+.main {
+	overflow-x: hidden;
+}
+
 img, video, object {
   max-width: 100%;
 }
